add memory setup